--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div class="one">
+        <div class="header">
+            <div class="logo"></div>
+            <div class="page-links"></div>
+        </div>
+    </div>
+    <div class="two"></div>
+    <div class="three"></div>
+    <div class="four"></div>
+    <div class="five"></div>
 </body>
 </html>
