top div of the page is designed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 <body>
     <div class="one">
         <div class="header">
-            <div class="logo"></div>
-            <div class="page-links"></div>
+            <div class="logo">Header Logo</div>
+            <div class="page-links">Header Link One  Header Link Two  Header Link Three </div>
+        </div>
+        <div class="title-box">
+            <div class="signup">
+            This Website is <br> Awesome <br>
+            <button class="button" type="button">Sign Up</button>
+            </div>
+            <div class="picture">
+                <div>This is a placeholder for an image</div>
+            </div>
         </div>
     </div>
     <div class="two"></div>
